fluxcd/podinfo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: podinfo-ingress
  namespace: podinfo
spec:
  rules:
  - host: podinfo.masterloft.k8s.marcel-lambacher.de
    http:
      paths:
      - backend:
          service:
            name: podinfo
            port:
              number: 9898
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - podinfo.masterloft.k8s.marcel-lambacher.de
    secretName: masterloft-k8s-marcel-lambacher-de-tls
    
status:
  loadBalancer: {}
